--- a/ContaOnline.UI.Web/Views/App/Login.cshtml
+++ b/ContaOnline.UI.Web/Views/App/Login.cshtml
@@ -5,16 +5,24 @@
 }
 
 <h2>Login</h2>
+<hr />
+<form class="form-horizontal" method="post">
+    <div class="text-danger" id="mensagem">@Model.Mensagem</div>
 
-<form method="post">
-    <div id="mensagem">@Model.Mensagem</div>
+    <div class="form-group">
+        <label class="control-label" for="Email">Email:</label>
+        <input class="form-control" type="text" name="Email" id="Email" />
+    </div>
 
-    <label for="Email">Email:</label>
-    <input type="text" name="Email" id="Email" />
+    <div class="form-group">
+        <label class="control-label" for="Senha">Senha:</label>
+        <input class="form-control" type="password" name="Senha" id="Senha" />
+    </div>
 
-    <label for="Senha">Senha:</label>
-    <input type="password" name="Senha" id="Senha" />
-
-    <input type="submit" value="Enviar" />
+    <div class="form-group">
+        <button class="btn btn-info" type="submit">
+            Enviar
+        </button>
+    </div>
 </form>
 
