criado telas de listagem e cadastro de contas

--- a/ContaOnline.UI.Web/Views/App/Inicio.cshtml
+++ b/ContaOnline.UI.Web/Views/App/Inicio.cshtml
@@ -6,3 +6,23 @@
 <p>
     Bem-vindo ao sistema de Contas On Line
 </p>
+
+<hr/>
+
+<ul class="list-group">
+    <li class="list-group-item">
+        <a href='@Url.Action("Inicio", "ContaCorrente")'>Conta Corrente</a>
+    </li>
+    <li class="list-group-item">
+        <a href="#">Contatos</a>
+    </li>
+    <li class="list-group-item">
+            <a href="#">Categoria de Contas</a>
+        </li>
+    <li class="list-group-item">
+        <a href="#">Contas a Pagar e Receber</a>
+    </li>
+    <li class="list-group-item">
+        <a href="#">Relatórios</a>
+    </li>
+</ul>
