--- a/ContaOnline.UI.Web/Views/ContaCorrente/Inicio.cshtml
+++ b/ContaOnline.UI.Web/Views/ContaCorrente/Inicio.cshtml
@@ -7,9 +7,9 @@
 <h2>Inicio</h2>
 
 <p>
-    @Html.ActionLink("Novo", "Incluir")
+    <a href='@Url.Action("Incluir")'>Novo</a>
 </p>
-<table class="table">
+<table class="table table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Descricao)
@@ -17,16 +17,16 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Descricao)
-        </td>
-        <td>
-            @Html.ActionLink("Alterar", "Alterar", new { id=item.Id }) |
-            @Html.ActionLink("Excluir", "Excluir", new { id=item.Id })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Descricao)
+            </td>
+            <td style="width: 1%; white-space: nowrap;">
+                <a href='@Url.Action("Alterar", new { Id = item.Id })'>Alterar</a> |
+                <a href='@Url.Action("Excluir", new { Id = item.Id })'>Excluir</a>
+            </td>
+        </tr>
+    }
 </table>
