--- a/ContaOnline.UI.Web/Views/ContaCorrente/Excluir.cshtml
+++ b/ContaOnline.UI.Web/Views/ContaCorrente/Excluir.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Descricao)
+            Descrição
         </dt>
 
         <dd>
@@ -24,8 +24,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Voltar", "Inicio")
+            <input type="submit" value="Deletar" class="btn btn-danger" /> |
+            <a class="btn btn-default" href='@Url.Action("Inicio")'>Voltar</a>
         </div>
     }
 </div>
