--- a/ContaOnline.UI.Web/Views/App/Inicio.cshtml
+++ b/ContaOnline.UI.Web/Views/App/Inicio.cshtml
@@ -7,18 +7,18 @@
     Bem-vindo ao sistema de Contas On Line
 </p>
 
-<hr/>
+<hr />
 
 <ul class="list-group">
     <li class="list-group-item">
         <a href='@Url.Action("Inicio", "ContaCorrente")'>Conta Corrente</a>
     </li>
     <li class="list-group-item">
-        <a href="#">Contatos</a>
+        <a href='@Url.Action("Inicio", "ContaCategoria")'>Categoria de Contas</a>
     </li>
     <li class="list-group-item">
-            <a href="#">Categoria de Contas</a>
-        </li>
+        <a href="#">Contatos</a>
+    </li>
     <li class="list-group-item">
         <a href="#">Contas a Pagar e Receber</a>
     </li>
