--- a/ContaOnline.UI.Web/Views/App/Inicio.cshtml
+++ b/ContaOnline.UI.Web/Views/App/Inicio.cshtml
@@ -17,7 +17,7 @@
         <a href='@Url.Action("Inicio", "ContaCategoria")'>Categoria de Contas</a>
     </li>
     <li class="list-group-item">
-        <a href="#">Contatos</a>
+        <a href='@Url.Action("Inicio", "Contato")'>Contatos</a>
     </li>
     <li class="list-group-item">
         <a href="#">Contas a Pagar e Receber</a>
